todas las pag responsive

--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -39,7 +39,6 @@
     </header>
     <main>
         <section class="showcase__capacitacion">
-            <!-- <img src="../recursos/capacitacion.jpg" alt="eventos"> -->
                 <h1>
                     ¡Sacale el mejor partido a tus habilidades con nosotros!
                 </h1>
@@ -53,33 +52,33 @@
             </div>
             <section class="banner__contenido--padre">
                 <div class="banner__contenido banner1">
-                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                    <h5>Si tenes mas marcas del lado izquierdo tu objetivo es la Carrera!</h5>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta1</label>
+                        <label for="pregunta">Tengo bastante tiempo para dedicar.</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta2</label>
+                        <label for="pregunta">Quiero trabajar de la fotografia</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta3</label>
+                        <label for="pregunta">Quiero aprender lo maximo posible</label>
                     </div>
                 </div>
                 <div class="banner__contenido banner2">
-                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                    <h5>Si tenes mas marcas del lado derecho te recomendamos los Cursos!</h5>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta1</label>
+                        <label for="pregunta">No tengo mucho tiempo para dedicarle</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta2</label>
+                        <label for="pregunta">Me gusta la fotografia como hobbie</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">pregunta3</label>
+                        <label for="pregunta">Quiero aprender lo basico o algo en particular</label>
                     </div>
                 </div>
             </section>
@@ -88,13 +87,13 @@
             <div class="cards__capacitacion--individuales">
                 <h3>Curso: introduccion a la fotografia</h3>
                 <img src="../recursos/inroduccion a la fotografia.jpg" alt="introduccion">
-                <h6>descripcion ...</h6>
+                <h6>Ingresa para ver toda la informacion sobre nuestros Cursos!</h6>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
             <div class="cards__capacitacion--individuales">
                 <h3>Carrera: fotografo profesional</h3>
                 <img src="../recursos/carrerag fotografia.jpg" alt="Carrera">
-                <h6>descripcion ...</h6>
+                <h6>Ingresa para ver toda la informacion sobre nuestra Carrera!</h6>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>            
         </section>
