--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -45,7 +45,7 @@
                     Enterate de los mejores Eventos y Convocatorias del pais.
                 </h1>
                 <p  class="showcase__subtitle">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur alias aliquam optio nemo earum, officia deleniti tempora nobis at modi sequi quisquam numquam beatae esse eveniet quia veniam odit vero.
+                    Aprendamos juntos en eventos multitudinales.
                 </p>
             </div>
         </section>
@@ -61,7 +61,7 @@
                     <i class="fa-solid fa-star-half"></i>
                 </div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel atque ab ipsa dolor accusamus est molestias dignissimos ex facilis eveniet?
+                    Descubre las mejores cámaras réflex, sus componentes, accesorios y su funcionamiento que te permitirán tomar fotos de alta calidad.
                 </p>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
@@ -76,7 +76,7 @@
                     <i class="fa-solid fa-star-half"></i>
                 </div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel atque ab ipsa dolor accusamus est molestias dignissimos ex facilis eveniet?
+                    Como buscar y retratar las mejores imagenes de la naturaleza, manjear la luz y las variables con las que nos podremos encontrar.
                 </p>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
@@ -91,7 +91,7 @@
                     <i class="fa-solid fa-star-half"></i>
                 </div>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel atque ab ipsa dolor accusamus est molestias dignissimos ex facilis eveniet?
+                    Son fundamentales en una fotografía: la luz, el volumen, el equilibrio, la simetría, la forma y la textura. Estos conceptos son la esencia de la fotografía creativa.
                 </p>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
