--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -26,7 +26,7 @@
                     <a href="login.html" target="_blank"><button class="header__loginbtn">Login</button></a>
                 </div>
                 <div class="header__buscador">
-                    <input type="text" class="header__buscador--input">Buscar
+                    <input type="text" class="header__buscador--input" placeholder="Buscar"> 
                 </div>
                 <label class="header__boton_desplegable" for="menu-check"><i for="menu-check" class="fa-solid fa-bars"></i></i></label>
                 <input class="menu__checkbox--input" type="checkbox" id="menu-check">                <ul class="header__navegador header__navegador--visible">
