--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shorcut icon" type="png" href="../CoderHouse/recursos/android-icon-36x36.png">
+    <link rel="shorcut icon" type="png" href="recursos/android-icon-36x36.png">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
