resuelvo ortografia y superposicion de contenido

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <h1>Encontra tu Fotografo/a Interior</h1>
             </div>
             <div class="page__subtitle">
-                <h2>Aprende con nosotros de forma divertida, practica y profesional; ya sea con nuestras modalidades Online y/o Presenciales.
-                Te invitamos a que explores nuestros cursos, eventos, carreras y si te quedo alguna duda simpre podes contactarnos !
+                <h2>Aprende con nosotros de forma divertida, práctica y profesional; ya sea con nuestras modalidades Online y/o Presenciales.
+                Te invitamos a que explores nuestros cursos, eventos, carreras y si te quedo alguna duda siempre podés contactarnos!
                 </h2>
             </div>
         </section>
