--- a/paginas/capacitacion.html
+++ b/paginas/capacitacion.html
@@ -43,16 +43,16 @@
                     ¡Sacale el mejor partido a tus habilidades con nosotros!
                 </h1>
                 <p>
-                    Marcanos tus preferencias y nosotros te recomendamos si nuestros cursos son ideales para vos o si es necesario comenzar la carrera!
+                    ¡Marcanos tus preferencias y nosotros te recomendamos si nuestros cursos son ideales para vos o si es necesario comenzar la carrera!
                 </p>
         </section>
         <section class="banner">
             <div class="banner__titulo">
-                <h2 > Marca tus preferencias! </h2>
+                <h2 > ¡Marca tus preferencias! </h2>
             </div>
             <section class="banner__contenido--padre">
                 <div class="banner__contenido banner1">
-                    <h5>Si tenes mas marcas del lado izquierdo tu objetivo es la Carrera!</h5>
+                    <h5>Si tenés más marcas del lado izquierdo tu objetivo es la Carrera!</h5>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
                         <label for="pregunta">Tengo bastante tiempo para dedicar.</label>
@@ -67,14 +67,14 @@
                     </div>
                 </div>
                 <div class="banner__contenido banner2">
-                    <h5>Si tenes mas marcas del lado derecho te recomendamos los Cursos!</h5>
+                    <h5>Si tenés más marcas del lado derecho te recomendamos los Cursos!</h5>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
                         <label for="pregunta">No tengo mucho tiempo para dedicarle</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
-                        <label for="pregunta">Me gusta la fotografia como hobbie</label>
+                        <label for="pregunta">Me gusta la fotografia como hobby</label>
                     </div>
                     <div class="banner__contenido--inputs">
                         <input type="checkbox">
@@ -85,15 +85,15 @@
         </section>
         <section class="cards__capacitacion">
             <div class="cards__capacitacion--individuales">
-                <h3>Curso: introduccion a la fotografia</h3>
+                <h3>Curso: introducción a la fotografía</h3>
                 <img src="../recursos/inroduccion a la fotografia.jpg" alt="introduccion">
-                <h6>Ingresa para ver toda la informacion sobre nuestros Cursos!</h6>
+                <h6>Ingresa para ver toda la información sobre nuestros Cursos!</h6>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
             <div class="cards__capacitacion--individuales">
-                <h3>Carrera: fotografo profesional</h3>
+                <h3>Carrera: fotógrafo profesional</h3>
                 <img src="../recursos/carrerag fotografia.jpg" alt="Carrera">
-                <h6>Ingresa para ver toda la informacion sobre nuestra Carrera!</h6>
+                <h6>Ingresa para ver toda la información sobre nuestra Carrera!</h6>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>            
         </section>
