--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -42,7 +42,7 @@
         <section class="container">          
             <div class="showcase">
                 <h1 class="showcase__title">
-                    Enterate de los mejores Eventos y Convocatorias del pais.
+                    Entérate de los mejores Eventos y Convocatorias del país.
                 </h1>
                 <p  class="showcase__subtitle">
                     Aprendamos juntos en eventos multitudinales.
@@ -66,7 +66,7 @@
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
             <div class="showcase__cards--individuales">
-                <h5>Fotografia de la naturaleza y paisajismo</h5>
+                <h5>Fotografía de la naturaleza y paisajismo</h5>
                   <img src="../recursos/evento2paisajismo.jpg" alt="evento2">
                 <div>
                     <i class="fa-solid fa-star"></i>
@@ -76,12 +76,12 @@
                     <i class="fa-solid fa-star-half"></i>
                 </div>
                 <p>
-                    Como buscar y retratar las mejores imagenes de la naturaleza, manjear la luz y las variables con las que nos podremos encontrar.
+                    Como buscar y retratar las mejores imágenes de la naturaleza, manejar la luz y las variables con las que nos podremos encontrar.
                 </p>
                 <a href="#">Ingresar <i class="fa-solid fa-angles-right"></i></a>
             </div>
             <div class="showcase__cards--individuales">
-                <h5>Compocision creativa de la imagen</h5>
+                <h5>Composición creativa de la imagen</h5>
                     <img src="../recursos/evento3creativo.jpeg" alt="evento3">
                 <div>
                     <i class="fa-solid fa-star"></i>
